[gd_scene load_steps=12 format=3 uid="uid://5r8icl42jumy"]

[ext_resource type="Script" path="res://COGITO/Wieldables/wieldable_flashlight.gd" id="1_h8vdt"]
[ext_resource type="AnimationLibrary" uid="uid://dtnyvbl2d4lxg" path="res://COGITO/Animations/Wieldables/Wieldable_Flashlight.res" id="2_54huf"]
[ext_resource type="Script" path="res://COGITO/Assets/Shader/ViewmodelSpace.gd" id="3_n878p"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rd1dr"]
albedo_color = Color(0.101961, 0.101961, 0.180392, 1)
metallic = 0.9
roughness = 0.1
emission_enabled = true
emission = Color(0.164706, 0.164706, 0.305882, 1)
emission_energy_multiplier = 0.2

[sub_resource type="SphereMesh" id="SphereMesh_m0iot"]
material = SubResource("StandardMaterial3D_rd1dr")
radius = 0.1
height = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gr1vx"]
albedo_color = Color(0.101961, 0.101961, 0.180392, 1)
metallic = 0.9
roughness = 0.1
emission_enabled = true
emission = Color(0.164706, 0.101961, 0.305882, 1)
emission_energy_multiplier = 0.2

[sub_resource type="TorusMesh" id="TorusMesh_jfhm4"]
material = SubResource("StandardMaterial3D_gr1vx")
inner_radius = 0.15
outer_radius = 0.17

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cc3v4"]
albedo_color = Color(0.101961, 0.101961, 0.180392, 1)
metallic = 0.9
roughness = 0.1
emission_enabled = true
emission = Color(0.164706, 0.101961, 0.305882, 1)
emission_energy_multiplier = 0.2

[sub_resource type="TorusMesh" id="TorusMesh_oxlq8"]
material = SubResource("StandardMaterial3D_cc3v4")
inner_radius = 0.2
outer_radius = 0.22

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ixdsy"]
albedo_color = Color(0.101961, 0.101961, 0.180392, 1)
metallic = 0.9
roughness = 0.1
emission_enabled = true
emission = Color(0.164706, 0.101961, 0.305882, 1)
emission_energy_multiplier = 0.2

[sub_resource type="TorusMesh" id="TorusMesh_gsptp"]
material = SubResource("StandardMaterial3D_ixdsy")
inner_radius = 0.25
outer_radius = 0.27

[node name="VoidDetector" type="Node3D" node_paths=PackedStringArray("wieldable_mesh")]
transform = Transform3D(-3.61999e-06, 0, 1, 0, 1, 0, -1, 0, -3.61999e-06, 0.325805, -0.279839, -0.531526)
script = ExtResource("1_h8vdt")
wieldable_mesh = NodePath("Detector_Mesh")
anim_equip = "Wieldable_Flashlight/equip"
anim_unequip = "Wieldable_Flashlight/unequip"
anim_action_primary = "Wieldable_Flashlight/action_primary"
anim_action_secondary = "Wieldable_Flashlight/action_secondary"
anim_reload = "Wieldable_Flashlight/reload"

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"Wieldable_Flashlight": ExtResource("2_54huf")
}

[node name="Detector_Mesh" type="Node3D" parent="."]
script = ExtResource("3_n878p")

[node name="CoreOrb" type="MeshInstance3D" parent="Detector_Mesh"]
mesh = SubResource("SphereMesh_m0iot")

[node name="InnerRing" type="MeshInstance3D" parent="Detector_Mesh"]
mesh = SubResource("TorusMesh_jfhm4")

[node name="OuterRing1" type="MeshInstance3D" parent="Detector_Mesh"]
transform = Transform3D(1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0)
mesh = SubResource("TorusMesh_oxlq8")

[node name="OuterRing2" type="MeshInstance3D" parent="Detector_Mesh"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)
mesh = SubResource("TorusMesh_gsptp")
